# kodtest

./: .gitignore  CMakeLists.txt  README.md
data/: ME0104T4
src/: CMakeLists.txt  main.cpp
